--- a/mybatis-xml/src/main/resources/application.yml
+++ b/mybatis-xml/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://172.17.12.168:3334/test2017
+    url: jdbc:mysql://localhost:3334/test2017
     username: root
-    password: headingmysql
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
 server:
   port: 8889
